# restclient

./: .gitignore  .gitlab-ci.yml  .vulture-whitelist.cfg  README.md  README.rst  Taskfile.yml  pyproject.toml  setup.cfg  setup.py
.config/: meta.yml
restclient/: __init__.py  auth.py  client.py  constants.py  exceptions.py  headers.py  response.py  structs.py  structures.py  urls.py  utils.py
