# -- Poetry --
[tool.poetry]
name = "APIRestClient"
version = "2.4.3"
description = "Client for sync/async query HTTP REST API services"
readme = "README.md"
repository = "https://gitlab.itpc.ru/libs/python/restclient"
authors = [
    "Igor Voropaev <snake@itpc.ru>",
    "Dmitry Kurochkin <kurochkin@itpc.ru>"
]
packages = [{ include = "restclient" }]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.17.0"

[[tool.poetry.source]]
name = "wheels"
url = "https://pypi.itpc.dev/mirror/wheels/+simple/"
default = true

[[tool.poetry.source]]
name = "all"
url = "https://pypi.itpc.dev/mirror/pypi.org/+simple/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 135
exclude = ["__submodules__", ".git"]
max-returns-amount = 10
max-parameters-amount = 15

# -- MyPy --
[tool.mypy]
ignore_missing_imports = true
cache_dir = "/dev/null"

# -- Vulture --
[tool.vulture]
exclude = [".vscode/", "__samples__/"]

# -- PyLint --
[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "import-error",
]

[tool.pylint.format]
max-line-length = 135

# -- PyTest --
[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "def __repr__", "def __str__"]
