[metadata]
name = APIRestClient

description=Client for various HTTP REST API
url=https://gitlab.itpc.ru/libs/python/restclient
author=Igor Voropaev
author_email=snake@itpc.ru

long_description_content_type = text/markdown
platforms=
    linux

[options]
install_requires = 
    httpx==0.11.1
packages=find:
[options.packages.find]
exclude =
    tests

[coverage:run]
omit = tests/*
[coverage:report]
exclude_lines = 
    pragma: no cover
    def __repr__
    def __str__

[flake8]
max-line-length=135
max-expression-complexity=8
max-cognitive-complexity=8
exclude=
    __submodules__,
    .git
per-file-ignores=
    constants.py:N801
    client.py:CFQ002
[mypy]
ignore_missing_imports = true
cache_dir = /dev/null
[pylint.messages_control]
disable=
    missing-module-docstring,
    missing-class-docstring,
    missing-function-docstring,
    too-few-public-methods,
    no-member,
    logging-fstring-interpolation,
    duplicate-code,
    superfluous-parens,
    protected-access,
    useless-super-delegation,
    raising-bad-type
[pylint.format]
max-line-length=135