[metadata]
name = APIRestClient

description=Client for sync/async query HTTP REST API services
url=https://gitlab.itpc.ru/libs/python/restclient
author=Igor Voropaev
author_email=snake@itpc.ru

long_description_content_type = text/markdown
platforms=
    linux

classifiers=
    Programming Language :: Python :: 3
python_requires = >=3.8

[options]
install_requires = 
    httpx>=0.15.0,<0.16.0
packages=find:
[options.packages.find]
exclude =
    tests

[coverage:run]
omit = tests/*
[coverage:report]
exclude_lines = 
    pragma: no cover
    def __repr__
    def __str__

[flake8]
max-line-length=135
max-expression-complexity=8
max-cognitive-complexity=8
exclude=
    __submodules__,
    .git
per-file-ignores=
    constants.py:N801
    client.py:CFQ002
[mypy]
ignore_missing_imports = true
cache_dir = /dev/null